# src/main/java/com/kalixys/amadeus/api/soap/PaginatedSoapResponse.java
@@ -1,0 +1,4 @@
+package com.kalixys.amadeus.api.soap;
+
+public record PaginatedSoapResponse<T>(T payload, SessionContext session, PaginationMetadata pagination) {
+}
